syntax = "proto3";
import "commons.proto";

package reward;

message Reward {
  string id = 1;
  string title = 2;
  string description = 3;
}
message Status {
  int32 code = 1;
  string message = 2;
}

message RewardResponse {
  oneof response {
    Status error = 1;
    Reward reward = 2;
  }
}

service RewardService {
  rpc GetRewardById(commons.FilterById) returns (RewardResponse) {}
}
